[package]
name = "testing-user-clients"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "test_keygen"
# path = "src/testkeygen.rs"

# [[bin]]
# name = "test_register"
# path = "src/testregister.rs"

# [[bin]]
# name = "test_sign"
# path = "src/testsign.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false }
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
# protocol = { path = "../protocol", default-features = false }
alice-send = { path = "../../alice-send", default-features = false }
