[package]
name   ="testing-utils"
version="0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt             ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.29.0" }
sp-keyring        ="24.0.0"
project-root      ="0.2.2"
sp-core           ={ version="21.0.0" }
env_logger        ="0.9.0"
log               ="0.4.14"
which             ="4.0.2"
parity-scale-codec="3.0.0"
lazy_static       ="1.4.0"
hex-literal       ="0.3.4"
entropy-shared    ={ path="../shared" }

# For CLI
clap                   ={ version="4.4.6", features=["derive"] }
anyhow                 ="1.0.75"
chacha20poly1305       ="0.10.1"
blake2                 ="0.10.4"
futures                ="0.3"
num                    ="0.4.0"
rand_core              ="0.6.4"
serde                  ={ version="1.0", default-features=false, features=["derive"] }
serde_json             ="1.0"
thiserror              ="1.0.47"
x25519-dalek           ="2.0.0"
zeroize                ="1.5.7"
generic-array          ="0.14.6"
entropy-protocol       ={ path="../protocol", features=["server"] }
reqwest                ={ version="0.11", features=["json", "stream"] }
sha3                   ="0.10.8"
base64                 ="0.13.0"
synedrion              ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", branch="keypair-creation-bug" }
# TODO rm unneeded features
tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }
hex    ="0.4.3"
colored="2.0.4"
subxt-signer = "0.31.0"
