[package]
name      ="testing-utils"
version   ='0.0.8'
authors   =['Entropy Cryptography <engineering@entropy.xyz>']
homepage  ='https://entropy.xyz/'
license   ='AGPL-3.0-or-later'
repository='https://github.com/entropyxyz/entropy-core'
edition   ='2021'
publish   =false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt             ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1" }
sp-keyring        ="24.0.0"
project-root      ="0.2.2"
sp-core           ={ version="21.0.0", default-features=false }
which             ="4.0.2"
parity-scale-codec="3.0.0"
lazy_static       ="1.4.0"
hex-literal       ="0.3.4"
entropy-shared    ={ path="../shared" }
entropy-protocol  ={ path="../protocol" }
axum              ={ version="0.6.18" }
rand_core         ="0.6.4"
kvdb              ={ path="../kvdb", default-features=false }
synedrion         ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="release/v0.0.12" }
server            ={ path="../server" }
tokio             ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
subxt-signer      ="0.31.0"

# Logging
tracing           ="0.1.37"
tracing-subscriber={ version="0.3.17", features=["env-filter"] }
