[package]
name      ="testing-utils"
version   ='0.0.8'
authors   =['Entropy Cryptography <engineering@entropy.xyz>']
homepage  ='https://entropy.xyz/'
license   ='AGPL-3.0-or-later'
repository='https://github.com/entropyxyz/entropy-core'
edition   ='2021'
publish   =false

[dependencies]
subxt             ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1" }
sp-keyring        ="24.0.0"
project-root      ="0.2.2"
sp-core           ={ version="21.0.0", default-features=false }
which             ="4.0.2"
parity-scale-codec="3.0.0"
lazy_static       ="1.4.0"
hex-literal       ="0.3.4"
entropy-shared    ={ path="../shared" }
tokio             ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
axum              ={ version="0.6.18" }
kvdb              ={ path="../kvdb", default-features=false }
server            ={ path="../server" }

# For test client
anyhow                 ="1.0.75"
blake2                 ="0.10.4"
futures                ="0.3"
num                    ="0.4.0"
rand_core              ="0.6.4"
serde                  ={ version="1.0", default-features=false, features=["derive"] }
serde_json             ="1.0"
thiserror              ="1.0.47"
x25519-dalek           ={ version="2.0.0", features=["static_secrets"] }
zeroize                ="1.5.7"
generic-array          ="0.14.6"
entropy-protocol       ={ path="../protocol" }
reqwest                ={ version="0.11", features=["json", "stream"] }
sha3                   ="0.10.8"
base64                 ="0.13.0"
synedrion              ={ git="ssh://git@github.com/entropyxyz/synedrion.git", branch="fix-32bit" }
x25519-chacha20poly1305={ git="https://github.com/entropyxyz/x25519-chacha20poly1305.git", branch="peg/unsafe-test-mode" }
hex                    ="0.4.3"
bincode                ="1.3.3"

# For test CLI
clap   ={ version="4.4.6", features=["derive"] }
colored="2.0.4"

# Logging
tracing           ="0.1.37"
tracing-subscriber={ version="0.3.17", features=["env-filter"] }
