[package]
name       ="entropy-user-protocol"
version    ="0.1.0"
edition    ="2021"
license    ="AGPL-3.0-or-later"
description=""

[dependencies]
# entropy-protocol={ path="../protocol" }
async-trait="0.1.73"
serde_json ="1.0"
synedrion  ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
serde      ={ version="1.0", features=["derive"], default-features=false }
subxt      ={ version="0.29.0", default-features=false }
# sp-core       ={ version="21.0.0", default-features = false}
tokio       ={ version="1.16", features=["sync", "rt"] }
x25519-dalek="2.0.0-pre.1"
futures     ="0.3"
hex         ="*"
blake2      ="0.10.4"
thiserror   ="1.0.40"
snow        ="0.9.2"
getrandom   ={ version="0.2", features=["js"] }
rand_core   ={ version="0.6.4", features=["getrandom"] }

# entropy-shared={ path="../shared", default-features = false, features=["wasm-std"]}

[lib]
crate-type=["cdylib", "rlib"]
