[package]
name       ='entropy'
version    ='0.2.0-rc.1'
description="Entropy substrate node"
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
build      ='build.rs'
edition    ='2021'
publish    =false

[package.metadata.docs.rs]
targets=['x86_64-unknown-linux-gnu']

[[bin]]
name='entropy'

[dependencies]

# Third-party dependencies
clap            ={ version="4.5.9", features=["derive"], optional=true }
codec           ={ package="parity-scale-codec", version="3.0.0" }
futures         ="0.3.30"
hex-literal     ="0.4.1"
itertools       ="0.13.0"
jsonrpsee       ={ version="0.20.3", features=["server"] }
lazy_static     ={ version="1.5.0", features=["spin_no_std"] }
log             ="0.4.22"
pallet-im-online={ version="28.0.0" }
rand            ="0.8.5"
serde           ={ version="1.0.204", features=["derive"] }
serde_json      ='1.0.120'

# Substrate Client

grandpa                 ={ version="0.20.0", package="sc-consensus-grandpa" }
sc-authority-discovery  ={ version="0.35.0" }
sc-basic-authorship     ={ version="0.35.0" }
sc-chain-spec           ={ version="28.0.0" }
sc-cli                  ={ version="0.37.0", optional=true }
sc-client-api           ={ version="29.0.0" }
sc-consensus            ={ version="0.34.0" }
sc-consensus-babe       ={ version="0.35.0" }
sc-consensus-babe-rpc   ={ version="0.35.0" }
sc-consensus-epochs     ={ version="0.34.0" }
sc-consensus-grandpa-rpc={ version="0.20.0" }
sc-consensus-slots      ={ version="0.34.0" }
sc-executor             ={ version="0.33.0" }
sc-network              ={ version="0.35.0" }
sc-network-common       ={ version="0.34.0" }
sc-network-sync         ={ version="0.34.0" }
sc-offchain             ={ version="30.0.0" }
sc-rpc                  ={ version="30.0.0" }
sc-rpc-api              ={ version="0.34.0" }
sc-service              ={ version="0.36.0" }
sc-storage-monitor      ={ version="0.17.0" }
sc-sync-state-rpc       ={ version="0.35.0" }
sc-sysinfo              ={ version="28.0.0" }
sc-telemetry            ={ version="16.0.0" }
sc-transaction-pool     ={ version="29.0.0" }
sc-transaction-pool-api ={ version="29.0.0" }
sc-rpc-spec-v2          ={ version="0.35.0" }

# Substrate Primitives
grandpa-primitives          ={ version="14.0.0", package="sp-consensus-grandpa" }
sp-api                      ={ version="27.0.0" }
sp-authority-discovery      ={ version="27.0.0" }
sp-block-builder            ={ version="27.0.0" }
sp-blockchain               ={ version="29.0.0" }
sp-consensus                ={ version="0.33.0" }
sp-consensus-babe           ={ version="0.33.0" }
sp-core                     ={ version="29.0.0" }
sp-inherents                ={ version="27.0.0" }
sp-keyring                  ={ version="32.0.0" }
sp-keystore                 ={ version="0.35.0" }
sp-runtime                  ={ version="32.0.0" }
sp-timestamp                ={ version="27.0.0" }
sp-transaction-storage-proof={ version="27.0.0" }
substrate-frame-rpc-system  ={ version="29.0.0" }

# FRAME Dependencies
frame-benchmarking          ={ version="29.0.0" }
frame-benchmarking-cli      ={ version="33.0.0", optional=true }
frame-system                ={ version="29.0.0" }
frame-system-rpc-runtime-api={ version="27.0.0" }

# Substrate Pallets
pallet-transaction-payment    ={ version="29.0.0" }
pallet-transaction-payment-rpc={ version="31.0.0" }

# Entropy Dependencies
entropy-runtime={ version="0.2.0-rc.1", path="../../runtime" }
entropy-shared={ version="0.2.0-rc.1", path="../../crates/shared", default-features=false, features=[
  "wasm-no-std",
] }
pallet-registry={ version="0.2.0-rc.1", path="../../pallets/registry" }
pallet-staking-extension={ version="0.2.0-rc.1", path="../../pallets/staking" }
project-root="0.2.2"

[build-dependencies]
clap={ version="4.5.9", optional=true }

pallet-balances             ={ version="29.0.0" }
substrate-build-script-utils={ version="11.0.0" }
try-runtime-cli             ={ version="0.42.0" }

[dev-dependencies]
tempfile  ="3.1.0"
sp-tracing={ version="16.0.0" }

[features]
default=["cli"]
cli=["clap", "frame-benchmarking-cli", "sc-cli", "sc-service/rocksdb"]
runtime-benchmarks=[
  "entropy-runtime/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime=["entropy-runtime/try-runtime", "try-runtime-cli/try-runtime"]
