[package]
name       ='entropy'
version    ='0.3.0-rc.1'
description="Entropy substrate node"
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
build      ='build.rs'
edition    ='2021'
publish    =false

[package.metadata.docs.rs]
targets=['x86_64-unknown-linux-gnu']

[[bin]]
name='entropy'

[dependencies]

# Third-party dependencies
clap            ={ version="4.5.20", features=["derive"], optional=true }
codec           ={ package="parity-scale-codec", version="3.0.0" }
futures         ="0.3.31"
hex-literal     ="0.4.1"
itertools       ="0.13.0"
jsonrpsee       ={ version="0.24.3" }
lazy_static     ={ version="1.5.0", features=["spin_no_std"] }
log             ="0.4.22"
pallet-im-online= { version = "37.0.0" }
rand            ="0.8.5"
serde           ={ version="1.0.213", features=["derive"] }
serde_json      ='1.0.132'

# Substrate Client

grandpa                 = { version = "0.30.0", package = "sc-consensus-grandpa" }
sc-authority-discovery  = { version = "0.45.0" }
sc-basic-authorship     = { version = "0.45.0" }
sc-chain-spec           = { version = "38.0.0" }
sc-cli                  = { version = "0.47.0", optional = true }
sc-client-api           = { version = "37.0.0" }
sc-consensus            = { version = "0.44.0" }
sc-consensus-babe       = { version = "0.45.0" }
sc-consensus-babe-rpc   = { version = "0.45.0" }
sc-consensus-epochs     = { version = "0.44.0" }
sc-consensus-grandpa-rpc= { version = "0.30.0" }
sc-consensus-slots      = { version = "0.44.0" }
sc-executor             = { version = "0.40.1" }
sc-network              = { version = "0.45.0" }
sc-network-common       = { version = "0.44.0" }
sc-network-sync         = { version = "0.44.0" }
sc-offchain             = { version = "40.0.0" }
sc-rpc                  = { version = "40.0.0" }
sc-rpc-api              = { version = "0.44.0" }
sc-service              = { version = "0.46.0" }
sc-storage-monitor      = { version = "0.22.0" }
sc-sync-state-rpc       = { version = "0.45.0" }
sc-sysinfo              = { version = "38.0.0" }
sc-telemetry            = { version = "25.0.0" }
sc-transaction-pool     = { version = "37.0.0" }
sc-transaction-pool-api = { version = "37.0.0" }
sc-rpc-spec-v2          = { version = "0.45.0" }
sc-network-statement = { version = "0.27.0" }

# Substrate Primitives
grandpa-primitives          = { version = "21.0.0", package = "sp-consensus-grandpa" }
sp-api                      = { version = "34.0.0" }
sp-authority-discovery      = { version = "34.0.0" }
sp-block-builder            = { version = "34.0.0" }
sp-blockchain               = { version = "37.0.1" }
sp-consensus                = { version = "0.40.0" }
sp-consensus-babe           = { version = "0.40.0" }
sp-core                     = { version = "34.0.0" }
sp-inherents                = { version = "34.0.0" }
sp-keyring                  = { version = "39.0.0" }
sp-keystore                 = { version = "0.40.0" }
sp-runtime                  = { version = "39.0.1" }
sp-timestamp                = { version = "34.0.0" }
sp-transaction-storage-proof= { version = "34.0.0" }
substrate-frame-rpc-system  = { version = "39.0.0" }
sp-statement-store  = { version = "18.0.0" }
sp-io  = { version = "38.0.0" }

# FRAME Dependencies
frame-benchmarking          = { version = "38.0.0", default-features = false, optional = true, features = ["std"] }
frame-benchmarking-cli      = { version = "43.0.0", optional = true }
frame-system                = { version = "38.0.0" }
frame-system-rpc-runtime-api= { version = "34.0.0" }

# Substrate Pallets
pallet-transaction-payment    = { version = "38.0.0" }
pallet-transaction-payment-rpc= { version = "41.0.0" }

# Entropy Dependencies
entropy-runtime={ version="0.3.0-rc.1", path="../../runtime" }
entropy-shared={ version="0.3.0-rc.1", path="../../crates/shared", default-features=false, features=[
  "wasm-no-std",
] }
pallet-registry={ version="0.3.0-rc.1", path="../../pallets/registry" }
pallet-staking-extension={ version="0.3.0-rc.1", path="../../pallets/staking" }
project-root="0.2.2"

[build-dependencies]
clap={ version="4.5.20", optional=true }

pallet-balances             = { version = "39.0.0" }
substrate-build-script-utils= { version = "11.0.0" }
try-runtime-cli             = { version = "0.42.0" }

[dev-dependencies]
tempfile  ="3.13.0"
sp-tracing= { version = "17.0.1" }

[features]
default=["cli"]
cli=["clap", "frame-benchmarking-cli", "sc-cli", "sc-service/rocksdb"]
runtime-benchmarks=[
  "entropy-runtime/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-benchmarking",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime=["entropy-runtime/try-runtime", "try-runtime-cli/try-runtime"]
