[package]
name       ='entropy'
version    ='0.4.0-rc.1'
description="Entropy substrate node"
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
build      ='build.rs'
edition    ='2021'
publish    =false

[package.metadata.docs.rs]
targets=['x86_64-unknown-linux-gnu']

[[bin]]
name='entropy'

[dependencies]

# Third-party dependencies
clap            ={ version="4.5.38", features=["derive"], optional=true }
codec           ={ package="parity-scale-codec", version="3.0.0" }
futures         ="0.3.31"
hex-literal     ="1.0.0"
itertools       ="0.14.0"
jsonrpsee       ={ version="0.24.3" }
lazy_static     ={ version="1.5.0", features=["spin_no_std"] }
log             ="0.4.27"
pallet-im-online= { version = "39.1.0" }
rand            ="0.8.5"
serde           ={ version="1.0.219", features=["derive"] }
serde_json      ='1.0.140'
hex             ={ version="0.4.3", optional=true }
project-root    ="0.2.2"

# Substrate Client

grandpa                 = { version = "0.34.0", package = "sc-consensus-grandpa" }
sc-authority-discovery  = { version = "0.49.0" }
sc-basic-authorship     = { version = "0.49.0" }
sc-chain-spec           = { version = "42.0.0" }
sc-cli                  = { version = "0.51.0", optional = true }
sc-client-api           = { version = "39.0.0" }
sc-consensus            = { version = "0.48.0" }
sc-consensus-babe       = { version = "0.49.0" }
sc-consensus-babe-rpc   = { version = "0.49.0" }
sc-consensus-epochs     = { version = "0.48.0" }
sc-consensus-grandpa-rpc= { version = "0.34.0" }
sc-consensus-slots      = { version = "0.48.0" }
sc-executor             = { version = "0.42.0" }
sc-network              = { version = "0.49.1" }
sc-network-common       = { version = "0.48.0" }
sc-network-sync         = { version = "0.48.0" }
sc-offchain             = { version = "44.0.0" }
sc-rpc                  = { version = "44.0.0" }
sc-rpc-api              = { version = "0.48.0" }
sc-service              = { version = "0.50.0" }
sc-storage-monitor      = { version = "0.24.0" }
sc-sync-state-rpc       = { version = "0.49.0" }
sc-sysinfo              = { version = "42.0.0" }
sc-telemetry            = { version = "28.1.0" }
sc-transaction-pool     = { version = "39.0.0" }
sc-transaction-pool-api = { version = "39.0.0" }
sc-rpc-spec-v2          = { version = "0.49.1" }

# Substrate Primitives
grandpa-primitives          = { version = "23.1.0", package = "sp-consensus-grandpa" }
sp-api                      = { version = "36.0.1" }
sp-authority-discovery      = { version = "36.0.0" }
sp-block-builder            = { version = "36.0.0" }
sp-blockchain               = { version = "39.0.0" }
sp-consensus                = { version = "0.42.0" }
sp-consensus-babe           = { version = "0.42.1" }
sp-core                     = { version = "36.1.0" }
sp-inherents                = { version = "36.0.0" }
sp-keyring                  = { version = "41.0.0" }
sp-keystore                 = { version = "0.42.0" }
sp-runtime                  = { version = "41.1.0" }
sp-statement-store          = { version = "20.1.0" }
sp-timestamp                = { version = "36.0.0" }
sp-transaction-storage-proof= { version = "36.1.0" }
sp-io                       = { version = "40.0.1" }
substrate-frame-rpc-system  = { version = "43.0.0" }

# FRAME Dependencies
frame-benchmarking          = { version = "40.0.0" }
frame-benchmarking-cli      = { version = "47.0.0", optional = true }
frame-system                = { version = "40.1.0" }
frame-system-rpc-runtime-api= { version = "36.0.0" }

# Substrate Pallets
pallet-transaction-payment    = { version = "40.0.0" }
pallet-transaction-payment-rpc= { version = "43.0.0" }

# Entropy Dependencies
entropy-runtime={ version="0.4.0-rc.1", path="../../runtime" }
entropy-shared={ version="0.4.0-rc.1", path="../../crates/shared", default-features=false, features=[
  "wasm-no-std",
] }
pallet-registry={ version="0.4.0-rc.1", path="../../pallets/registry" }
pallet-staking-extension={ version="0.4.0-rc.1", path="../../pallets/staking" }
pallet-parameters={ version="0.4.0-rc.1", path="../../pallets/parameters" }

[build-dependencies]
clap={ version="4.5.38", optional=true }

pallet-balances             = { version = "41.1.0" }
substrate-build-script-utils= { version = "11.0.0" }

[dev-dependencies]
tempfile  ="3.19.1"
sp-tracing= { version = "17.1.0" }

[features]
default=["cli"]
cli=["clap", "frame-benchmarking-cli", "sc-cli", "sc-service/rocksdb", "hex"]
runtime-benchmarks=[
  "entropy-runtime/runtime-benchmarks",
  "frame-benchmarking-cli/runtime-benchmarks",
]
# Enables real PCK certificate chain verification - which means TSS nodes must be runnning on TDX
# hardware
production=["entropy-runtime/production"]
# Sets a shorter session duration for the entropy-tss test_reshare_e2e
reshare-test=["entropy-runtime/reshare-test"]
