[package]
name       ="entropy-rpc-api"
version    ="0.1.0"
authors    =["Parity Technologies <admin@parity.io>"]
edition    ="2021"
description="Entropy RPC interfaces."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee               ={ version="0.15.1", features=["server", "macros"] }
pallet-staking-extension={ path="../../pallets/staking" }
